@@ -10,6 +10,8 @@ Changes to Version 2.0-19
 
     o added .merMod methods to Anova(), deltaMethod(), linearHypothesis(), matchCoefs(), and unexported utilities df.residual() and has.intercept(); insured compatibility with nlme and CRAN and developments versions of lme4.
 
+    o added use argument to scatterplotMatrix() (suggstion of Antoine Lizee).
+
     o small changes and fixes.
 
 Changes to Version 2.0-18
